@@ -13,8 +13,8 @@ static VALUE new(VALUE klass, VALUE doc, VALUE content)
 
   xmlNodePtr node = xmlNewCDataBlock(
       xml_doc->doc,
-      (const xmlChar *)StringValuePtr(content),
-      RSTRING_LEN(content)
+      Qnil == content ? NULL : (const xmlChar *)StringValuePtr(content),
+      Qnil == content ? 0 : RSTRING_LEN(content)
   );
 
   VALUE rb_node = Nokogiri_wrap_xml_node(node);
