@@ -11,6 +11,10 @@
   * Nokogiri::HTML::Document#meta_encoding for getting the meta encoding
   * Nokogiri::HTML::Document#meta_encoding= for setting the meta encoding
 
+* Bugfixes
+
+  * Fixed a problem with nil passed to CDATA constructor
+
 === 1.2.3 / 2009-03-22
 
 * Bugfixes
